# deploy-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
ifdeploy/: connect.py  deploy.py
tests/: test_fanout.py  test_filter.py  test_parallel_control.py  test_simple.py
tests/__snapshots__/: test_fanout.ambr  test_filter.ambr  test_parallel_control.ambr  test_simple.ambr
