[tool.poetry]
name = "ifdeploy"
version = "0.1.0"
description = "Informal deploy framework"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.2.0"
iconnect = {git = "git@github.com:informalsystems/connect-py", rev = "rano/package"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
syrupy = "^2.0.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
